@@ -66,7 +66,7 @@ div.scrollbar .sublevel .right {
 }
 div.scrollbar .overlevel { position:absolute; top: 14px; border: 0 green solid; height: 27px; left: 17px; }
 div.scrollbar .overlevel .bar {
-	position:absolute; left: 74px; width: 140px; height: 25px; border: 1px black solid; z-index: 1; cursor: pointer;
+	position:absolute; left: 74px; width: 140px; height: 25px; border: 1px black solid; z-index: 1;
 }
 div.scrollbar .overlevel .bar .icon {
 	position: relative; height: 25px; background: url(../images/general/bar/bar_bg.png) repeat-x;
