@@ -3,8 +3,9 @@ Changes for 2.1.1
 New features:
 
 Bug fixes:
+..F....... [ZBX-6777] fixed usage of cursor pointer (Guntis)
 ....I..... [ZBX-6637] added -m64 compilation flag for solaris to be able to understand all attributes of a 64-bit processes (igors)
-..F....... [ZBX-6800] added required javascripts for showing hintbox in Zabbix setup. (Guntis)
+..F....... [ZBX-6800] added required javascripts for showing hintbox in Zabbix setup (Guntis)
 ..F....... [ZBX-6796] added check in UI pre-requisites check, is memory_limit set to unlimited. (Guntis)
 ..F....... [ZBX-6776] added sorting by icon names in Map element configuration form (Guntis)
 A......... [ZBX-6771] fixed "status" field and existing host validation in Proxy API (Ivo)
